Fixed slight alignment issue on front page and resize starts earlier than before so when the page is rendered it's already centered.

--- a/src/.styles/ytcenter-styles-normal.css
+++ b/src/.styles/ytcenter-styles-normal.css
@@ -387,3 +387,6 @@ body.ytcenter-channelv2 #page.channel > #guide + #content {
   position: relative;
   z-index: 3;
 }
+.ytcenter-site-center #page {
+  padding-left: 0!important;
+}
